istio-argocd-istiogateway/bookinfo/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"

  gateways:
  - bookinfo-gateway

  http:
  - match:
    - uri:
        prefix: /

    route:
    - destination:
        host: productpage
        port:
          number: 9080
